Update ADMIN Interface

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -22,7 +22,7 @@
     <style>
       * {
         font-family: 'Source Sans Pro', sans-serif;
-        margin: 0px;
+        margin: 0;
       }
     </style>
   </head>
