--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -18,7 +18,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet">
-    <title>React App</title>
+    <title>Admin</title>
     <style>
       * {
         font-family: 'Source Sans Pro', sans-serif;
